--- a/about-our-doctors/about-dr-oconnell/index.html
+++ b/about-our-doctors/about-dr-oconnell/index.html
@@ -32,7 +32,7 @@
 		<!-- All in One SEO -->
 
 
-	<!-- This site is optimized with the Yoast SEO plugin v24.7 - https://yoast.com/wordpress/plugins/seo/ -->
+	<!-- This site is optimized with the Yoast SEO plugin v24.8.1 - https://yoast.com/wordpress/plugins/seo/ -->
 	<title>Dr. O’Connell - Suzelis Holistic Health</title>
 	<link rel="canonical" href="/about-our-doctors/about-dr-oconnell/">
 	<meta property="og:locale" content="en_US">
@@ -58,7 +58,7 @@
 	            "url": "/about-our-doctors/about-dr-oconnell/",
 	            "name": "Dr. O'Connell - Suzelis Holistic Health",
 	            "isPartOf": {
-	                "@id": "https://18.188.197.219/#website"
+	                "@id": "/#website"
 	            },
 	            "primaryImageOfPage": {
 	                "@id": "/about-our-doctors/about-dr-oconnell/#primaryimage"
@@ -99,7 +99,7 @@
 	                    "@type": "ListItem",
 	                    "position": 1,
 	                    "name": "Home",
-	                    "item": "https://18.188.197.219/"
+	                    "item": "/"
 	                },
 	                {
 	                    "@type": "ListItem",
@@ -116,8 +116,8 @@
 	        },
 	        {
 	            "@type": "WebSite",
-	            "@id": "https://18.188.197.219/#website",
-	            "url": "https://18.188.197.219/",
+	            "@id": "/#website",
+	            "url": "/",
 	            "name": "Suzelis Holistic Health",
 	            "description": "Natural Safe and Effective Health Care",
 	            "potentialAction": [
@@ -125,7 +125,7 @@
 	                    "@type": "SearchAction",
 	                    "target": {
 	                        "@type": "EntryPoint",
-	                        "urlTemplate": "https://18.188.197.219/?s={search_term_string}"
+	                        "urlTemplate": "/?s={search_term_string}"
 	                    },
 	                    "query-input": {
 	                        "@type": "PropertyValueSpecification",
@@ -153,7 +153,7 @@
 				var mi_version = '9.4.1';
 				var mi_track_user = true;
 				var mi_no_track_reason = '';
-								var MonsterInsightsDefaultLocations = {"page_location":"\/about-our-doctors\/about-dr-oconnell\/?simply_static_page=619"};
+								var MonsterInsightsDefaultLocations = {"page_location":"\/about-our-doctors\/about-dr-oconnell\/?simply_static_page=932"};
 				if ( typeof MonsterInsightsPrivacyGuardFilter === 'function' ) {
 					var MonsterInsightsLocations = (typeof MonsterInsightsExcludeQuery === 'object') ? MonsterInsightsPrivacyGuardFilter( MonsterInsightsExcludeQuery ) : MonsterInsightsPrivacyGuardFilter( MonsterInsightsDefaultLocations );
 				} else {
